Integration of Room and user token structure for authentication
- Integrate room
- Implementation of user token for authentication
- Implementation of test of User Token class

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -16,6 +16,10 @@ android {
         consumerProguardFiles "consumer-rules.pro"
     }
 
+    buildFeatures {
+        viewBinding true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -44,6 +48,10 @@ dependencies {
     //Hilt
     implementation hiltDi.hiltAndroid
     kapt hiltDi.hiltCompiler
+
+    //Room
+    implementation room.roomRuntime
+    kapt room.roomCompiler
 
     testImplementation test.junit4
     androidTestImplementation androidTest.values()
