--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,14 +35,24 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    packagingOptions {
+        exclude 'META-INF/common.kotlin_module'
+    }
 }
 
 dependencies {
     implementation project(":common")
 
+    //Hilt
     implementation hiltDi.hiltAndroid
     kapt hiltDi.hiltCompiler
 
+    //Room
+    implementation room.roomRuntime
+    kapt room.roomCompiler
+
     testImplementation test.junit4
     androidTestImplementation androidTest.values()
+    androidTestImplementation hiltTest.hiltTesting
+    kaptTest hiltTest.hiltCompiler
 }
