--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -23,7 +23,9 @@ ext {
             lifecycleExtension: '2.2.0',
             lifecycleCommon   : '2.4.0',
 
-            coroutines        : '1.5.2'
+            coroutines        : '1.5.2',
+
+            roomVersion       : '2.4.1'
     ]
 
     androidX = [
@@ -57,6 +59,11 @@ ext {
             gsonConverter: "com.squareup.retrofit2:converter-gson:${versions.gsonConverter}"
     ]
 
+    room = [
+            roomRuntime : "androidx.room:room-ktx:${versions.roomVersion}",
+            roomCompiler: "androidx.room:room-compiler:${versions.roomVersion}"
+    ]
+
     test = [
             junit4: "junit:junit:${versions.junit4Version}"
     ]
@@ -71,5 +78,11 @@ ext {
             espressoCore  : "androidx.test.espresso:espresso-core:${versions.espressoCore}",
             mockitoCore   : "org.mockito:mockito-core:${versions.mockito}",
             mockitoAndroid: "org.mockito:mockito-android:${versions.mockito}",
+            room          : "androidx.room:room-testing:${versions.roomVersion}"
+    ]
+
+    hiltTest = [
+            hiltTesting : "com.google.dagger:hilt-android-testing:${versions.hilt}",
+            hiltCompiler: "com.google.dagger:hilt-android-compiler::${versions.hilt}",
     ]
 }
