--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,7 +4,8 @@ ext {
             appcompat         : "1.4.0",
             material          : "1.5.0",
             constraintLayout  : "2.1.3",
-            gragmentKtx       : "1.4.1",
+            fragmentKtx       : "1.4.1",
+            splashScreen       : "1.0.0-beta01",
             junitExt          : "1.1.3",
             junit4Version     : "4.13.2",
             espressoCore      : "3.4.0",
@@ -33,7 +34,8 @@ ext {
             appcompat       : "androidx.appcompat:appcompat:${versions.appcompat}",
             constraintLayout: "androidx.constraintlayout:constraintlayout:${versions.constraintLayout}",
             material        : "com.google.android.material:material:${versions.material}",
-            fragmentKtx     : "androidx.fragment:fragment-ktx:${versions.gragmentKtx}",
+            fragmentKtx     : "androidx.fragment:fragment-ktx:${versions.fragmentKtx}",
+            splashScreen     : "androidx.core:core-splashscreen:${versions.splashScreen}",
     ]
 
     lifecycle = [
