adding retry and navigation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,8 @@ android {
 
 dependencies {
     implementation project(":common")
-
+//Navigation
+    implementation navigation.values()
     //Hilt
     implementation hiltDi.hiltAndroid
     kapt hiltDi.hiltCompiler
