--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -5,7 +5,7 @@ ext {
             material          : "1.5.0",
             constraintLayout  : "2.1.3",
             fragmentKtx       : "1.4.1",
-            splashScreen       : "1.0.0-beta01",
+            splashScreen      : "1.0.0-beta01",
             junitExt          : "1.1.3",
             junit4Version     : "4.13.2",
             espressoCore      : "3.4.0",
@@ -26,7 +26,9 @@ ext {
 
             coroutines        : '1.5.2',
 
-            roomVersion       : '2.4.1'
+            roomVersion       : '2.4.1',
+
+            navVersion        : "2.4.1"
     ]
 
     androidX = [
@@ -35,7 +37,13 @@ ext {
             constraintLayout: "androidx.constraintlayout:constraintlayout:${versions.constraintLayout}",
             material        : "com.google.android.material:material:${versions.material}",
             fragmentKtx     : "androidx.fragment:fragment-ktx:${versions.fragmentKtx}",
-            splashScreen     : "androidx.core:core-splashscreen:${versions.splashScreen}",
+            splashScreen    : "androidx.core:core-splashscreen:${versions.splashScreen}",
+    ]
+
+    navigation = [
+            fragmentFragment: "androidx.navigation:navigation-fragment-ktx:${versions.navVersion}",
+            navigationUi    : "androidx.navigation:navigation-ui-ktx:${versions.navVersion}",
+            dynamicFeatures : "androidx.navigation:navigation-dynamic-features-fragment:${versions.navVersion}",
     ]
 
     lifecycle = [
@@ -80,7 +88,8 @@ ext {
             espressoCore  : "androidx.test.espresso:espresso-core:${versions.espressoCore}",
             mockitoCore   : "org.mockito:mockito-core:${versions.mockito}",
             mockitoAndroid: "org.mockito:mockito-android:${versions.mockito}",
-            room          : "androidx.room:room-testing:${versions.roomVersion}"
+            room          : "androidx.room:room-testing:${versions.roomVersion}",
+            navigation    : "androidx.navigation:navigation-testing:${versions.navVersion}"
     ]
 
     hiltTest = [
