--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,8 @@ android {
 
 dependencies {
     implementation project(":common")
-//Navigation
-    implementation navigation.values()
+    //Navigation
+    //implementation navigation.values()
     //Hilt
     implementation hiltDi.hiltAndroid
     kapt hiltDi.hiltCompiler
